Bug 863104 - Fix Dock progress drawing on 10.6. r=josh